<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_default"
    android:orientation="vertical"
    android:padding="3dp" >

    <LinearLayout
        android:id="@+id/toolbox_paper_blank"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_blank" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_blank"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_narrow_ruled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_narrow_ruled" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_narrow_ruled"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_college_ruled"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_college_ruled" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_college_ruled"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_cornell_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_cornell_notes" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_cornell_notes"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_to_do_list"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_todolist" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_to_do_list"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_meeting_minutes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_minutes" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_meeting_minutes"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_diary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_diary" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_diary"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_quadrangle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_quadrangle" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_quadrangle"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_calligraphy_small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_calligraphy_small" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_calligraphy_small"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_calligraphy_big"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_calligraphy_big" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_calligraphy_big"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_stave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_stave" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_stave"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black" />

    <LinearLayout
        android:id="@+id/toolbox_paper_customized_paper"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:gravity="center"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:src="@drawable/ic_menu_paper_customized" />

        <CheckedTextView
            android:layout_width="wrap_content"
            android:layout_height="60dip"
            android:gravity="center_vertical"
            android:paddingLeft="10dip"
            android:paddingRight="10dip"
            android:singleLine="true"
            android:text="@string/toolbox_paper_customized_paper"
            android:textColor="@drawable/black"
            android:textSize="@dimen/text_size" />
    </LinearLayout>

</LinearLayout>