<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_background"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@android:color/white" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/frame2"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ibtn_more_sort"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_main_page_more_sort" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:text="@string/sort"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:background="#000000" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ibtn_more_preview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_main_page_more_preview" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:text="@string/preview"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:background="#000000" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ibtn_more_import"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_main_page_more_import" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:text="@string/import_file"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
            <View
                android:layout_width="fill_parent"
                android:layout_height="1dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:background="#000000" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

            <ImageButton
                android:id="@+id/ibtn_more_manage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_main_page_more_manage" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:layout_marginLeft="100dp"
                android:layout_marginRight="10dp"
                android:text="@string/manage"
                android:textAppearance="?android:attr/textAppearanceMedium" />

        </RelativeLayout>
    </LinearLayout>

</FrameLayout>